# HELIXos

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SPEC-M1.md  SPEC.md  conftest.py  pyproject.toml  requirements.txt
.claude/: NOTICE  README.md  helix-keywords.json  settings.json
.claude/hooks/: helix-context-loader.sh  helix_context_loader.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_or_component.yml
.github/workflows/: ci.yml
HELIXvault/: README.md
Obsidian-Brain/: README.md
agents/: README.md  charlotte_agent.py  kali_arbiter.py  natasha_agent.py  x_men_mutators.py
aigent-os-kernel/: README.md  error_correction.py  fsm_core.py  knot_api_wrapper.py
aigent-os-kernel/KNOTstore_bin/: KNOT_API_WRAPPER.py  knotcore_sim.py  signers.py
aigent-os-kernel/orchestrator/: possession.py
babel-tower/: README.md  babel_dispatcher.py  babelfish.py  lexicon_resolver.yaml
configs/: helixos.schema.json  helixos.yaml
docs/: GATES.md  SPECIFICATION.md  WHITEPAPER.md  glossary.md  latency-budgets.md  m1-acceptance.md  security-model.md
docs/adr/: ADR-001-journal-source-of-truth.md  ADR-002-knotcore-sidecar.md  ADR-003-ircd-build-vs-buy.md  (+1 more)
helix-irc-dmz/: README.md  daemon.py  helix_hub.py
helix_gate/: README.md  __init__.py  adapter.py  audit.py  demo.py  errors.py  lifecycle.py  module_resolver.py  policy.py  registry.py  replay.py  results.py  testkit.py  validation.py
obsidian-brain/: Council_Ledgers.md  genome.html  state_delta.json
scripts/: demo_m0.py  demo_m1.py
tests/: conftest.py  test_audit.py  test_braid.py  test_cancellation.py  test_conformance.py  test_dispatcher.py  test_epochs.py  test_executor.py  test_fsm.py  test_journal.py  test_m1_chaos.py  test_module_and_schema.py  test_policy.py  test_possession.py  test_registry.py  test_replay.py  test_sandbox.py  test_sidecar.py  test_signature.py  test_snapshot.py  test_temporal_and_audience.py  test_traceability.py  test_wrapper.py
(+34 files in other folders)
